style/index.css
/* ... */
body {
    font-family: var(--site-font-1);
    background-color: var(--site-background-color);
    color: var(--site-content-color);
}

body.dark-mode {
    --site-background-color: var(--primary-color-3);
    --site-content-color: var(--primary-color-2);

    --site-border-color: #fff;
    --scroll-nav-background-color: #000;
    --card-header-bottom-border-color: rgba(255, 255, 255, 0.25);
    --skill-bar-color: #fff;
    --section-header-background-color: #070707;
    --site-header-separator-color: rgba(255, 255, 255, 0.4);
    --card-border-color: #fff;
}

ul {
    list-style: none;
}

h1 {
    font-family: var(--site-font-2);
}

h1, h2, p, a {
    color: var(--site-content-color);
}

a, img, svg {
    display: block;
}

a {
    text-decoration: none;
}

img {
    display: block;
    object-fit: cover;
}

body.dark-mode img.dark-mode-img-flip {
    filter: invert(1);
}

button {
    border: 1px solid var(--site-border-color);
    cursor: pointer;
}

span {
    display: block;
}

.container--fixed {
    position: absolute;
    top: 0;
    left: 0;
}

.container--whole {
    width: 100%;
    height: 100vh;
}

span.navigation-contact,
span.navigation-portfolio,
span.navigation-skills {
    cursor: pointer;
}

#site-navigation-desktop {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 100px;
    z-index: 1000;
}

#navigation-container {
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 80%;
    max-width: 1300px;
    height: 100%;
}

#socials-container {
    width: 125px;
}

#socials-container ul {
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 100%;
}

#socials-container ul:hover li a svg:not(:hover),
#socials-container ul:hover li span svg:not(:hover) {
    opacity: 0.25;
}

#socials-container ul li a svg,
#socials-container ul li span svg {
    width: 1.5625rem;
    height: 1.5625rem;
}

#navigation-links {
    width: 50%;
}

#navigation-links ul {
    display: flex;
    justify-content: space-between;
}

#navigation-links ul li span,
#navigation-links ul li a {
    font-size: 1.125rem;
    text-transform: uppercase;
    letter-spacing: 0.125rem;
    padding: 10px 20px;
}

#navigation-links ul li span:not(#link--contact):not(.current-tab):hover
#navigation-links ul li a:hover {
    opacity: 0.25;
}

#navigation-links ul li span.current-tab {
    opacity: 0.5;
}

#navigation-links ul li span#link--contact {
    border-radius: 50px;
    background-color: #000;
    color: #fff;
}

body.dark-mode #navigation-links ul li button#link--contact {
    background-color: #fff;
    color: #000;
}

#site-navigation-desktop-scroll {
    position: fixed;
    top: 0;
    left: 0;
    display: flex;
    justify-content: center;
    align-items: flex-start;
    width: 100%;
    height: 100px;
    background-color: var(--scroll-nav-background-color);
    color: var(--site-content-color);
    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
    z-index: 500;
    opacity: 0.0;
}

#site-navigation-desktop-scroll.show-scroll-menu {
    opacity: 1.0;
}

#scroll-nav-inner {
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 85%;
    height: 100%;
}

#scroll-nav-inner h1 {
    font-family: var(--site-font-2);
    font-size: 2.5rem;
    text-transform: uppercase;
    letter-spacing: 0.125rem;
}

#scroll-nav-inner nav#scroll-socials-container {
    width: 150px;
}

#scroll-nav-inner nav#scroll-socials-container ul {
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 100%;
}

#scroll-nav-inner nav#scroll-socials-container ul li a svg,
#scroll-nav-inner nav#scroll-socials-container ul li span svg {
    width: 25px;
    height: 25px;
}

#scroll-nav-inner nav#scroll-navigation-links ul {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

#scroll-nav-inner nav#scroll-navigation-links ul li:not(:last-child) {
    margin-right: 35px;
}

#scroll-nav-inner nav#scroll-navigation-links ul li a,
#scroll-nav-inner nav#scroll-navigation-links ul li span {
    font-size: 1.25rem;
    text-transform: uppercase;
    letter-spacing: 0.125rem;
}

#portfolio-intro-content {
    display: flex;
    justify-content: center;
    align-items: center;
    z-index: 1;
}

#portfolio-content {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    width: 50%;
    max-width: 750px;
    height: 600px;
}

#intro-name-container {
    width: 100%;
    /* margin-bottom: 0px; */
}

#intro-name-container p {
    font-family: "Radian Light", sans-serif;
    font-size: 2.5rem;
    text-transform: uppercase;
    text-align: right;
    margin-right: 100px;
}

#intro-name-container h1 {
    font-size: 8.5rem;
    line-height: 7.5rem;
    text-transform: uppercase;
}

#intro-name-container h1[name-align="right"] {
    text-align: right;
}

#portfolio-content #intro-objective-message {
    font-family: "Radian Extra Light", sans-serif;
    font-size: 2rem;
    text-align: center;
}

#intro-ctas-container {
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 100%;
}

#intro-ctas-container button {
    border: 1px solid var(--site-border-color);
    border-radius: 50px;
    font-size: 2rem;
    text-transform: uppercase;
    width: 47.5%;
    padding: 1.25rem 0;
    text-align: center;
}

#intro-ctas-container button#cta--work {
    background-color: transparent;
    color: var(--site-content-color);
}

#intro-ctas-container button#cta--contact {
    background-color: #000;
    color: #fff;
}

body.dark-mode #intro-ctas-container button#cta--contact {
    background-color: #fff;
    color: #000;
}

#keyboard-graphic-container {
    display: flex;
    justify-content: center;
    align-items: center;
    z-index: -1;
}

#keyboard-container {
    width: 75%;
}
/* ... */

